--- a/Ensemble_Solution.ipynb
+++ b/Ensemble_Solution.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNv0gx9OvTR/lE7wKf4XkC/",
+      "authorship_tag": "ABX9TyOqnAMvbAW8XZsgvguYXudP",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -58,7 +58,7 @@
         },
         "outputId": "4837fe3b-a7d3-4c64-b455-28a454bfa557"
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -95,7 +95,7 @@
       "metadata": {
         "id": "PjcQo0CqxqVK"
       },
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -109,9 +109,9 @@
         "y = predict_students_dropout_and_academic_success.data.targets\n",
         "\n",
         "# Drop enrolled\n",
-        "rows_to_remove = y[y[\"Target\"].isin([\"Enrolled\"])].index\n",
-        "X = X.drop(rows_to_remove)\n",
-        "y = y.drop(rows_to_remove).squeeze()\n",
+        "y = y.squeeze()\n",
+        "X = X[y != 'Enrolled']\n",
+        "y = y[y != 'Enrolled']\n",
         "\n",
         "\n",
         "X_train, X_test, y_train, y_test = train_test_split(\n",
@@ -123,7 +123,7 @@
       "metadata": {
         "id": "EYQXaH6itafW"
       },
-      "execution_count": 55,
+      "execution_count": 63,
       "outputs": []
     },
     {
@@ -150,7 +150,7 @@
       "metadata": {
         "id": "bX2WIycIyiLc"
       },
-      "execution_count": 56,
+      "execution_count": 64,
       "outputs": []
     },
     {
@@ -184,9 +184,9 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "d584ffa0-27b1-4cf3-b020-115234a28e2c"
+        "outputId": "50062354-2910-445f-c6cf-4aa66a59785e"
       },
-      "execution_count": 57,
+      "execution_count": 65,
       "outputs": [
         {
           "output_type": "stream",
@@ -220,16 +220,16 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "7a09c6b9-18af-4573-b991-6f7cc2310a15"
+        "outputId": "267192b3-8fbb-49d6-c797-aa2979244aea"
       },
-      "execution_count": 58,
+      "execution_count": 66,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
             "Accuracy of Ensemble: 0.8512\n",
-            "[[227  50]\n",
+            "[[224  53]\n",
             " [ 18 431]]\n"
           ]
         }
@@ -258,9 +258,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "fVnxxrarNMlc",
-        "outputId": "78b547d4-709d-48dd-dc62-f0ebf19e80b9"
+        "outputId": "1d2f9664-5ead-408a-eea6-8bc083ed33c5"
       },
-      "execution_count": 61,
+      "execution_count": 67,
       "outputs": [
         {
           "output_type": "stream",
